// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TermToggleGroupFilter render - active 1`] = `
Array [
  <EuiFilterButton
    color="text"
    grow={true}
    hasActiveFilters={true}
    iconSide="right"
    key="field_value_toggle_filter_item_0"
    onClick={[Function]}
    type="button"
    withNext={true}
  >
    Kibana
  </EuiFilterButton>,
  <EuiFilterButton
    color="text"
    grow={true}
    hasActiveFilters={false}
    iconSide="right"
    key="field_value_toggle_filter_item_1"
    onClick={[Function]}
    type="button"
    withNext={false}
  >
    Elasticsearch
  </EuiFilterButton>,
]
`;

exports[`TermToggleGroupFilter render - active negated - custom negated name 1`] = `
Array [
  <EuiFilterButton
    color="text"
    grow={true}
    hasActiveFilters={true}
    iconSide="right"
    key="field_value_toggle_filter_item_0"
    onClick={[Function]}
    type="button"
    withNext={true}
  >
    -Kibana
  </EuiFilterButton>,
  <EuiFilterButton
    color="text"
    grow={true}
    hasActiveFilters={false}
    iconSide="right"
    key="field_value_toggle_filter_item_1"
    onClick={[Function]}
    type="button"
    withNext={false}
  >
    Elasticsearch
  </EuiFilterButton>,
]
`;

exports[`TermToggleGroupFilter render - active negated 1`] = `
Array [
  <EuiFilterButton
    color="text"
    grow={true}
    hasActiveFilters={true}
    iconSide="right"
    key="field_value_toggle_filter_item_0"
    onClick={[Function]}
    type="button"
    withNext={true}
  >
    Not Kibana
  </EuiFilterButton>,
  <EuiFilterButton
    color="text"
    grow={true}
    hasActiveFilters={false}
    iconSide="right"
    key="field_value_toggle_filter_item_1"
    onClick={[Function]}
    type="button"
    withNext={false}
  >
    Elasticsearch
  </EuiFilterButton>,
]
`;

exports[`TermToggleGroupFilter render 1`] = `
Array [
  <EuiFilterButton
    color="text"
    grow={true}
    hasActiveFilters={false}
    iconSide="right"
    key="field_value_toggle_filter_item_0"
    onClick={[Function]}
    type="button"
    withNext={true}
  >
    Kibana
  </EuiFilterButton>,
  <EuiFilterButton
    color="text"
    grow={true}
    hasActiveFilters={false}
    iconSide="right"
    key="field_value_toggle_filter_item_1"
    onClick={[Function]}
    type="button"
    withNext={false}
  >
    Elasticsearch
  </EuiFilterButton>,
]
`;
